--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ button, textarea, input {
     --vegas-gold: hsl(45, 54%, 58%);
     --light-gray: hsl(0, 0%, 84%);
     --light-gray-70: hsla(0, 0%, 84%, 0.702);
+    --bittersweet-shimmer: hsl(0, 43%, 51%);
 
     /*Font-size variables*/
     --subtext-size: 0.7rem;
@@ -109,7 +110,6 @@ main {
 -----------------------------*/
 
 .icon_box {
-    position: relative;
     width: 30px;
     height: 30px;
     border-radius: 8px;
@@ -147,6 +147,7 @@ main {
     background-color: var(--orange-yellow-crayola);
     position: absolute;
     margin-top: 7px;
+
 }
 
 /*----------------------------
@@ -464,9 +465,32 @@ main {
     Contact section
 -----------------------------*/
 
-.form_title {
-    padding: 20px;
+.map_box {
+    position: relative;
+    height: 250px;
+    width: 100%;
+    border-radius: 16px;
+    border: 1px solid var(--border-color);
+    overflow: hidden;
 }
+
+.map_box figure { height: 100%; }
+
+.map_box iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    filter: grayscale(1) invert(1);
+}
+
+
+.form_title { 
+    padding: 20px; 
+    color: var(--light-gray);
+    font-weight: 700;
+    font-size: 1.3rem;
+}
+
 
 .form_wrapper {
     display: grid;
@@ -483,8 +507,51 @@ input {
     color: var(--light-gray);
 }
 
+textarea {
+    width: 100%;
+    height: 120px;
+    border: 1px solid var(--border-color);
+    border-radius: 15px;
+    padding: 20px;
+    resize: vertical;
+    color: var(--light-gray);
+    font-size: 1rem;
+}
 
+::-webkit-resizer {
+    display: none;
+}
 
+::placeholder {
+    font-size: 1rem;
+    font-weight: 1rem;
+}
+
+.send_button {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--vegas-gold);
+    font-weight: 500;
+    font-size: 1rem;
+    background: var(--gradient-jet);
+    padding: 15px;
+    gap: 10px;
+    border-radius: 15px;
+    box-shadow: var(--shadow-2);
+    z-index: 1;
+}
+
+.send_button:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
+
+input:focus, textarea:focus { border-color: var(--orange-yellow-crayola); }
+
+input:focus:invalid, textarea:focus:invalid { border-color: var(--bittersweet-shimmer); }
 
 /*-----------------------------------------
     Responsive style min-width 580px
