--- a/css/style.css
+++ b/css/style.css
@@ -443,20 +443,72 @@ main {
 }
 
 /*----------------------------
-    Portfolio me section
+    Portfolio section
 -----------------------------*/
 
-.portfolio_container {
+.projects_container > ul {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-gap: 10px;
 }
 
-.portfolio_items {
-    margin-top: 25px;
-    border-radius: var(--border-radius);
+.projects_container figure {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.project_item > a img {
+    width: 100%;
+    height: 100%;
+    object-fit: center;
+    transition: var(--transition-1);
+}
+
+.description_content { margin: 10px 0 25px 0; }
+
+.description_content h1 {
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: var(--light-gray);
+}
+
+.description_content p {
+    font-size: 0.8rem;
+    font-weight: 300;
+    color: var(--light-gray-70);
+}
+
+.icon_eye_box {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: var(--border-color);
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: var(--transition-1);
+    z-index: 1;
+}
+
+.icon_eye_box ion-icon {
+    font-size: 20px;
+    color: var(--orange-yellow-crayola);
+    --ionicon-stroke-width: 50px;
+}
+
+.project_item > a:hover .icon_eye_box {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.project_item > a:hover img { transform: scale(1.1); }
 
 /*----------------------------
     Contact section
@@ -482,14 +534,19 @@ main {
 
 
 .form_title { 
-    padding: 20px; 
+    margin: 20px 0 20px 0; 
     color: var(--light-gray);
     font-weight: 700;
     font-size: 1.3rem;
 }
 
-
 .form_wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.input_wrapper {
     display: grid;
     grid-template-columns: 1fr;
     gap: 25px;
@@ -507,6 +564,7 @@ input {
 textarea {
     width: 100%;
     height: 120px;
+    max-height: 200px;
     border: 1px solid var(--border-color);
     border-radius: 15px;
     padding: 20px;
@@ -692,6 +750,10 @@ input:focus:invalid, textarea:focus:invalid { border-color: var(--bittersweet-sh
     .profile_info > ul {
         display: grid;
         grid-template-columns: repeat(2, auto);
+    }
+
+    .input_wrapper {
+        grid-template-columns: repeat(2, 1fr);
     }
 
 }
